frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-service
spec:
  type: NodePort
  selector:
    app: todo-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31080


# kind: Service
# metadata:
#   name: todo-frontend
# spec:
#   selector:
#     app: todo-frontend
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: 80
